--- a/notebooks/improve4var_with_less_obs.ipynb
+++ b/notebooks/improve4var_with_less_obs.ipynb
@@ -51,7 +51,7 @@
     "# import the module using a relative path\n",
     "sys.path.append(project_dir)\n",
     "from scripts.mtl_results_utils import read_multi_single_exps_results\n",
-    "from hydromtl.utils import hydro_constant\n"
+    "from hydromtl.utils import hydro_constant"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "python run_task.py --exp expstlssm001 --output_vars usgsFlow ssm --loss_weight 0.0 1.0 --train_period 2015-10-01 2018-10-01 --test_period 2018-10-01 2021-10-01 --ctx 1 --random 1234 --limit_part 0\n",
     "# MTL without STL-Q-pretrained\n",
     "python run_task.py --exp expmtlqssm001 --output_vars usgsFlow ssm --loss_weight 0.5 0.5 --train_period 2015-10-01 2018-10-01 --test_period 2018-10-01 2021-10-01 --ctx 0 --random 1234\n",
-    "# MTL with STL-Q-pretrained\n",
+    "# MTL with STL-Q-pretrained; test_epoch is same as train_epoch\n",
     "python run_task.py --exp expmtlqssm101 --output_vars usgsFlow ssm --loss_weight 0.5 0.5 --train_period 2015-10-01 2018-10-01 --test_period 2018-10-01 2021-10-01 --ctx 1 --random 1234 --weight_path /mnt/sdc/owen/code/HydroMTL/results/camels/expstlq201/model_Ep200.pth --train_epoch 100\n",
     "```\n",
     "\n",
@@ -141,8 +141,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "(\n",
     "    exps_ssm_results_wo_pre,\n",
     "    preds_ssm_wo_pre,\n",
@@ -159,18 +157,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.2535357148077777"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:414: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBiaslow[k] = np.sum(lowpred - lowtarget) / np.sum(lowtarget) * 100\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:391: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBias[k] = np.sum(xx - yy) / np.sum(yy) * 100\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/scipy/stats/_stats_py.py:4424: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "  warnings.warn(stats.ConstantInputWarning(msg))\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:399: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  R2[k] = 1 - SSRes / SST\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:400: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  NSE[k] = 1 - SSRes / SST\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/numpy/lib/function_base.py:2853: RuntimeWarning: invalid value encountered in divide\n",
+      "  c /= stddev[:, None]\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/numpy/lib/function_base.py:2854: RuntimeWarning: invalid value encountered in divide\n",
+      "  c /= stddev[None, :]\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:200: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  alpha = np.std(xs) / np.std(xo)\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:201: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  beta = np.mean(xs) / np.mean(xo)\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:415: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBiashigh[k] = np.sum(highpred - hightarget) / np.sum(hightarget) * 100\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:414: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBiaslow[k] = np.sum(lowpred - lowtarget) / np.sum(lowtarget) * 100\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:391: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBias[k] = np.sum(xx - yy) / np.sum(yy) * 100\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/scipy/stats/_stats_py.py:4424: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "  warnings.warn(stats.ConstantInputWarning(msg))\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:399: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  R2[k] = 1 - SSRes / SST\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:400: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  NSE[k] = 1 - SSRes / SST\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/numpy/lib/function_base.py:2853: RuntimeWarning: invalid value encountered in divide\n",
+      "  c /= stddev[:, None]\n",
+      "/mnt/data/owen411/program/miniconda3/envs/MTL/lib/python3.10/site-packages/numpy/lib/function_base.py:2854: RuntimeWarning: invalid value encountered in divide\n",
+      "  c /= stddev[None, :]\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:200: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  alpha = np.std(xs) / np.std(xo)\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:201: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  beta = np.mean(xs) / np.mean(xo)\n",
+      "/mnt/sdc/owen/code/HydroMTL/hydromtl/utils/hydro_stat.py:415: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  PBiashigh[k] = np.sum(highpred - hightarget) / np.sum(hightarget) * 100\n"
+     ]
     }
    ],
    "source": [
@@ -181,11 +215,8 @@
     ") = read_multi_single_exps_results(\n",
     "    exps_smtl_pretrain,\n",
     "    var_idx=1,\n",
-    "    single_is_flow=False,\n",
-    "    flow_idx_in_mtl=0,\n",
     "    ensemble=-1,\n",
     "    return_value=True,\n",
-    "    et_unit=\"mm/day\",\n",
     ")\n"
    ]
   },
@@ -195,6 +226,128 @@
    "metadata": {},
    "source": [
     "After reading results, we can plot for the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "exps_ssm_results_wo_pre and exps_ssm_results_pre both have two np.array. The first is for STL ssm and the second is for MTL ssm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(exps_ssm_results_wo_pre)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The STL ssm NSE is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6487881967444535"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(exps_ssm_results_wo_pre[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ssm NSE of MTL without pretrained model is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6895572633182268"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(exps_ssm_results_wo_pre[1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ssm NSE of MTL with pretrained model is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7039296915702933"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(exps_ssm_results_pre[1])"
    ]
   }
  ],
